# gifclip

./: .gitignore  Cargo.toml  README.md
.github/workflows/: auto-release.yml  release.yml
src/: config.rs  main.rs  setup.rs  srt.rs
