[package]
name = "gifclip"
version = "0.1.8"
edition = "2024"
description = "Download YouTube clips and export as GIFs with burned-in subtitles"
license = "MIT"
repository = "https://github.com/coryzibell/gifclip"
keywords = ["youtube", "gif", "video", "subtitles", "cli"]
categories = ["command-line-utilities", "multimedia::video"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
which = "7"
tempfile = "3"
regex = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
flate2 = "1"
tar = "0.4"
zip = "2"
dialoguer = "0.11"
xz2 = "0.1"
